Added updated markdowns

--- a/2018.md
+++ b/2018.md
@@ -1,21 +1,21 @@
 # Stock Market Holidays in 2018
 
-| Date              | Holiday                |
-|-------------------|------------------------|
-| 26 January 2018   | Republic Day           |
-| 13 February 2018  | Mahashivratri          |
-| 02 March 2018     | Holi                   |
-| 29 March 2018     | Mahavir Jayanti        |
-| 30 March 2018     | Good Friday            |
-| 01 May 2018       | Maharashtra Day        |
-| 15 August 2018    | Independence Day       |
-| 22 August 2018    | Bakri Id               |
-| 13 September 2018 | Ganesh Chaturthi       |
-| 20 September 2018 | Muharram               |
-| 02 October 2018   | Mahatma Gandhi Jayanti |
-| 18 October 2018   | Dussehra               |
-| 07 November 2018  | Diwali Laxmi Pujan*    |
-| 08 November 2018  | Diwali Balipratipada   |
-| 23 November 2018  | Gurunanak Jayanti      |
-| 25 December 2018  | Christmas              |
+| Month     | Date       | Day       | Holiday                |
+|-----------|------------|-----------|------------------------|
+| January   | 2018-01-26 | Friday    | Republic Day           |
+| February  | 2018-02-13 | Tuesday   | Mahashivratri          |
+| March     | 2018-03-02 | Friday    | Holi                   |
+| March     | 2018-03-29 | Thursday  | Mahavir Jayanti        |
+| March     | 2018-03-30 | Friday    | Good Friday            |
+| May       | 2018-05-01 | Tuesday   | Maharashtra Day        |
+| August    | 2018-08-15 | Wednesday | Independence Day       |
+| August    | 2018-08-22 | Wednesday | Bakri Id               |
+| September | 2018-09-13 | Thursday  | Ganesh Chaturthi       |
+| September | 2018-09-20 | Thursday  | Muharram               |
+| October   | 2018-10-02 | Tuesday   | Mahatma Gandhi Jayanti |
+| October   | 2018-10-18 | Thursday  | Dussehra               |
+| November  | 2018-11-07 | Wednesday | Diwali Laxmi Pujan*    |
+| November  | 2018-11-08 | Thursday  | Diwali Balipratipada   |
+| November  | 2018-11-23 | Friday    | Gurunanak Jayanti      |
+| December  | 2018-12-25 | Tuesday   | Christmas              |
 
