--- a/2019.md
+++ b/2019.md
@@ -1,22 +1,22 @@
 # Stock Market Holidays in 2019
 
-| Date              | Holiday                       |
-|-------------------|-------------------------------|
-| 04 March 2019     | Mahashivratri                 |
-| 21 March 2019     | Holi                          |
-| 17 April 2019     | Mahavir Jayanti               |
-| 19 April 2019     | Good Friday                   |
-| 29 April 2019     | General Elections (Lok Sabha) |
-| 01 May 2019       | Maharashtra Day               |
-| 05 June 2019      | Id-Ul-Fitr (Ramzan Id)        |
-| 12 August 2019    | Bakri Id                      |
-| 15 August 2019    | Independence Day              |
-| 02 September 2019 | Ganesh Chaturthi              |
-| 10 September 2019 | Muharram                      |
-| 02 October 2019   | Mahatma Gandhi Jayanti        |
-| 08 October 2019   | Dussehra                      |
-| 21 October 2019   | Maharashtra Assembly Election |
-| 28 October 2019   | Diwali Balipratipada          |
-| 12 November 2019  | Gurunanak Jayanti             |
-| 25 December 2019  | Christmas                     |
+| Month     | Date       | Day       | Holiday                       |
+|-----------|------------|-----------|-------------------------------|
+| March     | 2019-03-04 | Monday    | Mahashivratri                 |
+| March     | 2019-03-21 | Thursday  | Holi                          |
+| April     | 2019-04-17 | Wednesday | Mahavir Jayanti               |
+| April     | 2019-04-19 | Friday    | Good Friday                   |
+| April     | 2019-04-29 | Monday    | General Elections (Lok Sabha) |
+| May       | 2019-05-01 | Wednesday | Maharashtra Day               |
+| June      | 2019-06-05 | Wednesday | Id-Ul-Fitr (Ramzan Id)        |
+| August    | 2019-08-12 | Monday    | Bakri Id                      |
+| August    | 2019-08-15 | Thursday  | Independence Day              |
+| September | 2019-09-02 | Monday    | Ganesh Chaturthi              |
+| September | 2019-09-10 | Tuesday   | Muharram                      |
+| October   | 2019-10-02 | Wednesday | Mahatma Gandhi Jayanti        |
+| October   | 2019-10-08 | Tuesday   | Dussehra                      |
+| October   | 2019-10-21 | Monday    | Maharashtra Assembly Election |
+| October   | 2019-10-28 | Monday    | Diwali Balipratipada          |
+| November  | 2019-11-12 | Tuesday   | Gurunanak Jayanti             |
+| December  | 2019-12-25 | Wednesday | Christmas                     |
 
