--- a/2020.md
+++ b/2020.md
@@ -1,18 +1,18 @@
 # Stock Market Holidays in 2020
 
-| Date             | Holiday                         |
-|------------------|---------------------------------|
-| 21 February 2020 | Mahashivratri                   |
-| 10 March 2020    | Holi                            |
-| 29 March 2020    | Holi                            |
-| 02 April 2020    | Ram Navami                      |
-| 06 April 2020    | Mahavir Jayanti                 |
-| 10 April 2020    | Good Friday                     |
-| 14 April 2020    | Dr. Baba Saheb Ambedkar Jayanti |
-| 01 May 2020      | Maharashtra Day                 |
-| 25 May 2020      | Id-Ul-Fitr (Ramzan ID)          |
-| 02 October 2020  | Mahatma Gandhi Jayanti          |
-| 16 November 2020 | Diwali-Balipratipada            |
-| 30 November 2020 | Gurunanak Jayanti               |
-| 25 December 2020 | Christmas                       |
+| Month    | Date       | Day      | Holiday                         |
+|----------|------------|----------|---------------------------------|
+| February | 2020-02-21 | Friday   | Mahashivratri                   |
+| March    | 2020-03-10 | Tuesday  | Holi                            |
+| March    | 2020-03-29 | Sunday   | Holi                            |
+| April    | 2020-04-02 | Thursday | Ram Navami                      |
+| April    | 2020-04-06 | Monday   | Mahavir Jayanti                 |
+| April    | 2020-04-10 | Friday   | Good Friday                     |
+| April    | 2020-04-14 | Tuesday  | Dr. Baba Saheb Ambedkar Jayanti |
+| May      | 2020-05-01 | Friday   | Maharashtra Day                 |
+| May      | 2020-05-25 | Monday   | Id-Ul-Fitr (Ramzan ID)          |
+| October  | 2020-10-02 | Friday   | Mahatma Gandhi Jayanti          |
+| November | 2020-11-16 | Monday   | Diwali-Balipratipada            |
+| November | 2020-11-30 | Monday   | Gurunanak Jayanti               |
+| December | 2020-12-25 | Friday   | Christmas                       |
 
