--- a/2021.md
+++ b/2021.md
@@ -1,18 +1,18 @@
 # Stock Market Holidays in 2021
 
-| Date              | Holiday                         |
-|-------------------|---------------------------------|
-| 26 January 2021   | Republic Day                    |
-| 11 March 2021     | Mahashivratri                   |
-| 02 April 2021     | Good Friday                     |
-| 14 April 2021     | Dr. Baba Saheb Ambedkar Jayanti |
-| 21 April 2021     | Ram Navami                      |
-| 13 May 2021       | Id-Ul-Fitr (Ramzan Id)          |
-| 21 July 2021      | Bakri Id                        |
-| 19 August 2021    | Muharram                        |
-| 10 September 2021 | Ganesh Chaturthi                |
-| 15 October 2021   | Dussehra                        |
-| 04 November 2021  | Diwali (Laxmi Pujan)            |
-| 05 November 2021  | Diwali (Balipratipada)          |
-| 19 November 2021  | Gurunanak Jayanti               |
+| Month     | Date       | Day       | Holiday                         |
+|-----------|------------|-----------|---------------------------------|
+| January   | 2021-01-26 | Tuesday   | Republic Day                    |
+| March     | 2021-03-11 | Thursday  | Mahashivratri                   |
+| April     | 2021-04-02 | Friday    | Good Friday                     |
+| April     | 2021-04-14 | Wednesday | Dr. Baba Saheb Ambedkar Jayanti |
+| April     | 2021-04-21 | Wednesday | Ram Navami                      |
+| May       | 2021-05-13 | Thursday  | Id-Ul-Fitr (Ramzan Id)          |
+| July      | 2021-07-21 | Wednesday | Bakri Id                        |
+| August    | 2021-08-19 | Thursday  | Muharram                        |
+| September | 2021-09-10 | Friday    | Ganesh Chaturthi                |
+| October   | 2021-10-15 | Friday    | Dussehra                        |
+| November  | 2021-11-04 | Thursday  | Diwali (Laxmi Pujan)            |
+| November  | 2021-11-05 | Friday    | Diwali (Balipratipada)          |
+| November  | 2021-11-19 | Friday    | Gurunanak Jayanti               |
 
