--- a/2022.md
+++ b/2022.md
@@ -1,18 +1,18 @@
 # Stock Market Holidays in 2022
 
-| Date             | Holiday                                          |
-|------------------|--------------------------------------------------|
-| 26 January 2022  | Republic Day                                     |
-| 01 March 2022    | Mahashivratri                                    |
-| 18 March 2022    | Holi                                             |
-| 14 April 2022    | Mahavir Jayanti / Dr.Baba Saheb Ambedkar Jayanti |
-| 15 April 2022    | Good Friday                                      |
-| 03 May 2022      | Id-Ul-Fitr (Ramzan Id)                           |
-| 09 August 2022   | Muharram                                         |
-| 15 August 2022   | Independence Day                                 |
-| 31 August 2022   | Ganesh Chaturthi                                 |
-| 05 October 2022  | Dussehra                                         |
-| 24 October 2022  | Diwali (Laxmi Pujan)                             |
-| 26 October 2022  | Diwali (Balipratipada)                           |
-| 08 November 2022 | Gurunanak Jayanti                                |
+| Month    | Date       | Day       | Holiday                                          |
+|----------|------------|-----------|--------------------------------------------------|
+| January  | 2022-01-26 | Wednesday | Republic Day                                     |
+| March    | 2022-03-01 | Tuesday   | Mahashivratri                                    |
+| March    | 2022-03-18 | Friday    | Holi                                             |
+| April    | 2022-04-14 | Thursday  | Mahavir Jayanti / Dr.Baba Saheb Ambedkar Jayanti |
+| April    | 2022-04-15 | Friday    | Good Friday                                      |
+| May      | 2022-05-03 | Tuesday   | Id-Ul-Fitr (Ramzan Id)                           |
+| August   | 2022-08-09 | Tuesday   | Muharram                                         |
+| August   | 2022-08-15 | Monday    | Independence Day                                 |
+| August   | 2022-08-31 | Wednesday | Ganesh Chaturthi                                 |
+| October  | 2022-10-05 | Wednesday | Dussehra                                         |
+| October  | 2022-10-24 | Monday    | Diwali (Laxmi Pujan)                             |
+| October  | 2022-10-26 | Wednesday | Diwali (Balipratipada)                           |
+| November | 2022-11-08 | Tuesday   | Gurunanak Jayanti                                |
 
