--- a/2023.md
+++ b/2023.md
@@ -1,20 +1,20 @@
 # Stock Market Holidays in 2023
 
-| Date              | Holiday                         |
-|-------------------|---------------------------------|
-| 26 January 2023   | Republic Day                    |
-| 07 March 2023     | Holi                            |
-| 30 March 2023     | Ram Navami                      |
-| 04 April 2023     | Mahavir Jayanti                 |
-| 07 April 2023     | Good Friday                     |
-| 14 April 2023     | Dr. Baba Saheb Ambedkar Jayanti |
-| 01 May 2023       | Maharashtra Day                 |
-| 29 June 2023      | Bakri Id                        |
-| 15 August 2023    | Independence Day                |
-| 19 September 2023 | Ganesh Chaturthi                |
-| 02 October 2023   | Mahatma Gandhi Jayanti          |
-| 24 October 2023   | Dussehra                        |
-| 14 November 2023  | Diwali Balipratipada            |
-| 27 November 2023  | Gurunanak Jayanti               |
-| 25 December 2023  | Christmas                       |
+| Month     | Date       | Day      | Holiday                         |
+|-----------|------------|----------|---------------------------------|
+| January   | 2023-01-26 | Thursday | Republic Day                    |
+| March     | 2023-03-07 | Tuesday  | Holi                            |
+| March     | 2023-03-30 | Thursday | Ram Navami                      |
+| April     | 2023-04-04 | Tuesday  | Mahavir Jayanti                 |
+| April     | 2023-04-07 | Friday   | Good Friday                     |
+| April     | 2023-04-14 | Friday   | Dr. Baba Saheb Ambedkar Jayanti |
+| May       | 2023-05-01 | Monday   | Maharashtra Day                 |
+| June      | 2023-06-29 | Thursday | Bakri Id                        |
+| August    | 2023-08-15 | Tuesday  | Independence Day                |
+| September | 2023-09-19 | Tuesday  | Ganesh Chaturthi                |
+| October   | 2023-10-02 | Monday   | Mahatma Gandhi Jayanti          |
+| October   | 2023-10-24 | Tuesday  | Dussehra                        |
+| November  | 2023-11-14 | Tuesday  | Diwali Balipratipada            |
+| November  | 2023-11-27 | Monday   | Gurunanak Jayanti               |
+| December  | 2023-12-25 | Monday   | Christmas                       |
 
