--- a/2024.md
+++ b/2024.md
@@ -1,22 +1,22 @@
 # Stock Market Holidays in 2024
 
-| Date             | Holiday                           |
-|------------------|-----------------------------------|
-| 22 January 2024  | Ram Mandir Inauguration Day       |
-| 26 January 2024  | Republic Day                      |
-| 08 March 2024    | Maha Shiv Ratri                   |
-| 25 March 2024    | Holi                              |
-| 29 March 2024    | Good Friday                       |
-| 11 April 2024    | Eid-Ul-Fitr (Ramzan Eid)          |
-| 17 April 2024    | Ram Navami                        |
-| 01 May 2024      | Maharashtra Day                   |
-| 20 May 2024      | General Elections (Lok Sabha)     |
-| 17 June 2024     | Bakri Eid                         |
-| 17 July 2024     | Moharram                          |
-| 15 August 2024   | Independence Day                  |
-| 02 October 2024  | Mahatma Gandhi Jayanti            |
-| 01 November 2024 | Diwali-Laxmi Pujan*               |
-| 15 November 2024 | Gurunanak Jayanti                 |
-| 20 November 2024 | Assembly Elections in Maharashtra |
-| 25 December 2024 | Christmas                         |
+| Month    | Date       | Day       | Holiday                           |
+|----------|------------|-----------|-----------------------------------|
+| January  | 2024-01-22 | Monday    | Ram Mandir Inauguration Day       |
+| January  | 2024-01-26 | Friday    | Republic Day                      |
+| March    | 2024-03-08 | Friday    | Maha Shiv Ratri                   |
+| March    | 2024-03-25 | Monday    | Holi                              |
+| March    | 2024-03-29 | Friday    | Good Friday                       |
+| April    | 2024-04-11 | Thursday  | Eid-Ul-Fitr (Ramzan Eid)          |
+| April    | 2024-04-17 | Wednesday | Ram Navami                        |
+| May      | 2024-05-01 | Wednesday | Maharashtra Day                   |
+| May      | 2024-05-20 | Monday    | General Elections (Lok Sabha)     |
+| June     | 2024-06-17 | Monday    | Bakri Eid                         |
+| July     | 2024-07-17 | Wednesday | Moharram                          |
+| August   | 2024-08-15 | Thursday  | Independence Day                  |
+| October  | 2024-10-02 | Wednesday | Mahatma Gandhi Jayanti            |
+| November | 2024-11-01 | Friday    | Diwali-Laxmi Pujan*               |
+| November | 2024-11-15 | Friday    | Gurunanak Jayanti                 |
+| November | 2024-11-20 | Wednesday | Assembly Elections in Maharashtra |
+| December | 2024-12-25 | Wednesday | Christmas                         |
 
