--- a/2025.md
+++ b/2025.md
@@ -1,19 +1,19 @@
 # Stock Market Holidays in 2025
 
-| Date             | Holiday                            |
-|------------------|------------------------------------|
-| 26 February 2025 | Mahashivratri                      |
-| 14 March 2025    | Holi                               |
-| 31 March 2025    | Id-Ul-Fitr (Ramadan Eid)           |
-| 10 April 2025    | Shri Mahavir Jayanti               |
-| 14 April 2025    | Dr. Baba Saheb Ambedkar Jayanti    |
-| 18 April 2025    | Good Friday                        |
-| 01 May 2025      | Maharashtra Day                    |
-| 15 August 2025   | Independence Day                   |
-| 27 August 2025   | Ganesh Chaturthi                   |
-| 02 October 2025  | Mahatma Gandhi Jayanti/Dussehra    |
-| 21 October 2025  | Diwali Laxmi Pujan                 |
-| 22 October 2025  | Diwali-Balipratipada               |
-| 05 November 2025 | Prakash Gurpurb Sri Guru Nanak Dev |
-| 25 December 2025 | Christmas                          |
+| Month    | Date       | Day       | Holiday                            |
+|----------|------------|-----------|------------------------------------|
+| February | 2025-02-26 | Wednesday | Mahashivratri                      |
+| March    | 2025-03-14 | Friday    | Holi                               |
+| March    | 2025-03-31 | Monday    | Id-Ul-Fitr (Ramadan Eid)           |
+| April    | 2025-04-10 | Thursday  | Shri Mahavir Jayanti               |
+| April    | 2025-04-14 | Monday    | Dr. Baba Saheb Ambedkar Jayanti    |
+| April    | 2025-04-18 | Friday    | Good Friday                        |
+| May      | 2025-05-01 | Thursday  | Maharashtra Day                    |
+| August   | 2025-08-15 | Friday    | Independence Day                   |
+| August   | 2025-08-27 | Wednesday | Ganesh Chaturthi                   |
+| October  | 2025-10-02 | Thursday  | Mahatma Gandhi Jayanti/Dussehra    |
+| October  | 2025-10-21 | Tuesday   | Diwali Laxmi Pujan                 |
+| October  | 2025-10-22 | Wednesday | Diwali-Balipratipada               |
+| November | 2025-11-05 | Wednesday | Prakash Gurpurb Sri Guru Nanak Dev |
+| December | 2025-12-25 | Thursday  | Christmas                          |
 
